--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12 bannerText">
+          <img src="card-2.jpg" class="card-img-top" alt="...">
+          
           <h2 class="bannerTitle  animate__animated animate__backInLeft">Hi There!!</h2>
           <p class="bannerDesc"> A Professional Web Developer</p>
         </div>
